--- a/template-service/pom.xml
+++ b/template-service/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.legaldocsgpt</groupId>
-    <artifactId>api-gateway</artifactId>
+    <artifactId>template-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>api-gateway</name>
-    <description>api-gateway</description>
+    <name>template-service</name>
+    <description>template-service</description>
     <url/>
     <licenses>
         <license/>
@@ -28,26 +28,17 @@
     </scm>
     <properties>
         <java.version>21</java.version>
-        <spring.boot.version>3.5.4</spring.boot.version>
     </properties>
-
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-gateway-server-webflux</artifactId>
-            <version>4.3.0</version>
         </dependency>
     </dependencies>
 
