--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -1,5 +1,4 @@
 FROM maven:3.9.9-eclipse-temurin-21 AS builder
-
 WORKDIR /app
 COPY pom.xml .
 RUN mvn dependency:go-offline -B
@@ -8,6 +7,7 @@ RUN mvn clean package -DskipTests
 
 FROM openjdk:21-jdk AS runner
 WORKDIR /app
-COPY --from=builder /app/target/auth-service-*.jar app.jar
+COPY --from=builder /app/target/auth-service-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 8081
 ENTRYPOINT ["java", "-jar", "app.jar"]
+
