--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -14,21 +14,26 @@ spring:
               uri: http://auth-service:8081
               predicates:
                 - Path=/api/auth/**
+              filters:
+                - StripPrefix=2
+
             - id: document-generator
               uri: http://document-generator:8082
               predicates:
                 - Path=/api/documents/**
+              filters:
+                - StripPrefix=2
 
             - id: template-service
               uri: http://template-service:8083
               predicates:
                 - Path=/api/templates/**
+              filters:
+                - StripPrefix=2
 
             - id: storage-service
               uri: http://storage-service:8084
               predicates:
                 - Path=/api/storage/**
-
-
-          default-filters:
-            - StripPrefix=2
+              filters:
+                - StripPrefix=2
